set image layout

--- a/style.css
+++ b/style.css
@@ -31,3 +31,19 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.image-container {
+  margin: 10px 30%;
+}
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 30px;
+  }
+  .image-container {
+    margin: 10px;
+  }
+}
